# proto/swagger/docs.swagger.json
@@ -1059,7 +1059,7 @@
         },
         "addedAt": {
           "type": "string",
-          "format": "int64",
+          "format": "date-time",
           "title": "Время добавления в друзья"
         }
       },
@@ -1081,21 +1081,32 @@
           "title": "Идентификатор получателя"
         },
         "status": {
-          "type": "string",
-          "title": "Статус запроса (\"pending\", \"accepted\", \"rejected\")"
+          "$ref": "#/definitions/v1FriendRequestStatus",
+          "title": "Статус запроса"
         },
         "createdAt": {
           "type": "string",
-          "format": "int64",
+          "format": "date-time",
           "title": "Время создания запроса"
         },
         "updatedAt": {
           "type": "string",
-          "format": "int64",
+          "format": "date-time",
           "title": "Время обновления статуса"
         }
       },
       "title": "Информация о запросе на дружбу"
+    },
+    "v1FriendRequestStatus": {
+      "type": "string",
+      "enum": [
+        "UNKNOWN",
+        "PENDING",
+        "ACCEPTED",
+        "REJECTED"
+      ],
+      "default": "UNKNOWN",
+      "title": "Перечисление статусов запроса на дружбу"
     },
     "v1GetFriendsListResponse": {
       "type": "object",
@@ -1109,7 +1120,7 @@
           "title": "Список друзей"
         }
       },
-      "title": "Ответ с списком друзей"
+      "title": "Ответ со списком друзей"
     },
     "v1GetMessagesResponse": {
       "type": "object",
@@ -1169,7 +1180,7 @@
           "title": "Исходящие запросы"
         }
       },
-      "title": "Ответ с списком запросов на дружбу"
+      "title": "Ответ со списком запросов на дружбу"
     },
     "v1GetUserResponse": {
       "type": "object",
@@ -1460,19 +1471,19 @@
     "v1SendFriendRequestRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "senderId": {
           "type": "string",
           "title": "Идентификатор пользователя, отправляющего запрос"
         },
-        "friendId": {
+        "receiverId": {
           "type": "string",
           "title": "Идентификатор пользователя, которому отправляется запрос"
         }
       },
       "title": "Сообщение для отправки запроса на добавление в друзья",
       "required": [
-        "userId",
-        "friendId"
+        "senderId",
+        "receiverId"
       ]
     },
     "v1SendFriendRequestResponse": {
